QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

SVN TRUNK

- Probable fix to debian bug report #624198 - segfault when
  pressing the stop button (by Grant Adrian Diffey, after a
  patch from Adrian Knoth, thanks).

- Desktop environment session shutdown (eg. logout) is now
  tapped for graceful application exit, even though the main
  window is active (visible) and minimizing to system tray
  is enabled. Both were causing first shutdown/logout attempt
  to abort. Not anymore, hopefully ;).

- Make sure all activated patchbay definition files are in
  their complete and absolute directory path forms.

- Connections refresh button now does an immediate and true
  reconstruction of all clients and their respective ports
  and connections, unconditionally.

- Command line server start option (-s, --start) is now made
  independent from configuration setup option (cf. Setup/Misc
  /Start JACK audio server on application startup).

- Now handling cable socket types properly to let patchbay
  definitions work correctly, whenever having sockets with
  the very same literal name (twisted from patch #3183467,
  by Karsten, thanks;).

- Abrupt focus behavior when any of the keyboard modifiers
  (Shift, Ctrl, Alt, Caps Lock) is hit while on Connections
  client/port aliases editing (rename) has been fixed.

- Russian (ru) translation updated (by Alexandre Prokoudine).

- Added include "errno.h" alegedly missing for BSD style
  systems (applying patch for bug #3126091).


0.3.7  2010-11-30  JACK Session managerism.

- Session widget has session save type preserved as well.

- Connections and the new Messages/Status widgets now have
  their last open tab preserved across program run-cycles.

- Connections and Patchbay widgets have been finally given
  up on an old feature request: an Expand All items button.

- A significant UI layout has been made: the Messages and