@@ -181,9 +181,6 @@ public:
 	int iMessagesStatusTabPage;
 	int iConnectionsTabPage;
 
-	// Last session save type...
-	int iSessionSaveType;
-	
 	// Aliases containers.
 	qjackctlConnectAlias aliasAudioOutputs;
 	qjackctlConnectAlias aliasAudioInputs;
