@@ -5,6 +5,9 @@ ChangeLog
 
 SVN TRUNK
 
+- Session "Save" button now a drop-down menu, replacing the
+  session save type combo-box/drop-down list selection.
+
 - Probable fix to debian bug report #624198 - segfault when
   pressing the stop button (by Grant Adrian Diffey, after a
   patch from Adrian Knoth, thanks).
